2015-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/error.h (ThrowReaderException): More significant
	exceptions (e.g. errors) should overwrite less significant
	exceptions (e.g. warnings) thrown earlier.

	* coders/bmp.c (ReadBMPImage): Detect 32-bit integer overflows and
	other annoyances caused by intentionally broken files.  Also, only
	warn if the file header claims the file is larger than it is since
	this is a benign issue.

	* magick/blob.c (OpenBlob): Fix "magic header bytes" log message
	count value.

2015-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated NEWS with more changes.

	* Magick++/lib/Magick++/Include.h (Magick): Add GetImageGeometry
	to MagickLib namespace in order to avoid a compilation problem
	noticed with Visual C++ 6.0.

2014-02-22  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* VisualMagick\configure\configure.cpp Fixed crash.
        Renamed debug to configure_d.exe to prevent mess.

2015-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Invoke
	NTInitializeExceptionHandlers() under Windows.

	* magick/nt_base.c (NTInitializeExceptionHandlers): Add a new
	private function which disables pop-up Windows on exceptions and
	registers a handler for Windows exceptions to clean up temporary
	files prior to program exit.

	* magick/magick.c (PanicDestroyMagick): Use
	PurgeTemporaryFilesAsyncSafe() rather than PurgeTemporaryFiles().
	(InitializeMagickSignalHandlers): Always register for SIGINT, even
	under Microsoft Windows.

	* magick/tempfile.c (PurgeTemporaryFilesAsyncSafe): New private
	function to clean up temporary files prior to program exit.
	Async-safe so it can be safely called from a signal handler.
	Intentionally leaks memory.

2015-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fix crash while
	parsing corrupt EXIF which was reported by Stijn Sanders on
	2015-02-17.
