@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150224"
-#define public MagickPackageReleaseDate "snapshot-20150224"
+#define public MagickPackageVersionAddendum ".020150225"
+#define public MagickPackageReleaseDate "snapshot-20150225"
